--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,8 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
-        
+
+        compile group: 'org.json', name: 'json', version: '20171018'
     }
 }
 
